// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`The component should render 1`] = `
<div
  class="item"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-search"
      class="su-search"
    />
    Test
  </div>
</div>
`;

exports[`The component should render active 1`] = `
<div
  class="item active"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-search"
      class="su-search"
    />
    Test
  </div>
</div>
`;

exports[`The component should render with children 1`] = `
<div
  class="item"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-cog"
      class="su-cog"
    />
    Settings
  </div>
  <span
    aria-label="su-angle-right"
    class="su-angle-right clickable childrenIndicator"
    role="button"
    tabindex="0"
  />
</div>
`;

exports[`The component should render with children an active child and expanded 1`] = `
<div
  class="item active"
>
  <div
    class="title"
    role="button"
  >
    <span
      aria-label="su-cog"
      class="su-cog"
    />
    Settings
  </div>
  <div>
    <div
      class="item"
    >
      <div
        class="title"
        role="button"
      >
        Settings 1
      </div>
    </div>
    <div
      class="item active"
    >
      <div
        class="title"
        role="button"
      >
        Settings 2
      </div>
    </div>
  </div>
  <span
    aria-label="su-angle-down"
    class="su-angle-down clickable childrenIndicator"
    role="button"
    tabindex="0"
  />
</div>
`;
